src/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from src/Grammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseHasquelito -> Expr                     (0)
	Expr -> let var '=' Expr in Expr                   (1)
	Expr -> '(' '\\' var "->" Expr ')' "::" TypeExp "->" TypeExp   (2)
	Expr -> if Expr then Expr else Expr                (3)
	Expr -> Expr "==" Expr                             (4)
	Expr -> Expr ">=" Expr                             (5)
	Expr -> Expr "<=" Expr                             (6)
	Expr -> Expr "/=" Expr                             (7)
	Expr -> Expr '>' Expr                              (8)
	Expr -> Expr '<' Expr                              (9)
	Expr -> Expr "&&" Expr                             (10)
	Expr -> Expr "||" Expr                             (11)
	Expr -> Expr ':' Expr                              (12)
	Expr -> Expr "++" Expr                             (13)
	Expr -> List                                       (14)
	Expr -> Juxt                                       (15)
	Juxt -> Juxt Atom                                  (16)
	Juxt -> quot Atom Atom                             (17)
	Juxt -> rem Atom Atom                              (18)
	Juxt -> '-' Atom                                   (19)
	Juxt -> Atom '+' Atom                              (20)
	Juxt -> Atom '-' Atom                              (21)
	Juxt -> Atom '*' Atom                              (22)
	Juxt -> Atom '/' Atom                              (23)
	Juxt -> Atom '^' Atom                              (24)
	Juxt -> Atom                                       (25)
	Atom -> '(' Expr ')'                               (26)
	Atom -> int                                        (27)
	Atom -> bool                                       (28)
	Atom -> float                                      (29)
	Atom -> var                                        (30)
	TypeExp -> PrimType                                (31)
	TypeExp -> TypeExp "->" TypeExp                    (32)
	TypeExp -> '(' TypeExp ')'                         (33)
	PrimType -> Bool                                   (34)
	PrimType -> Int                                    (35)
	PrimType -> Float                                  (36)
	List -> '[' ListMembers ']'                        (37)
	ListMembers ->                                     (38)
	ListMembers -> Atom                                (39)
	ListMembers -> Atom ',' ListMembers                (40)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	Int            { INT p }
	Bool           { BOOL p }
	Float          { FLOAT p }
	int            { INTVAL p $$ }
	float          { FLOATVAL p $$ }
	bool           { BOOLVAL p $$ }
	let            { LET p }
	in             { IN p }
	if             { IF p }
	then           { THEN p }
	else           { ELSE p }
	'\\'           { LAMBDA p }
	"->"           { ARROW p }
	"::"           { COLONS p }
	"&&"           { AND p }
	"||"           { OR p }
	'='            { BIND p }
	'+'            { PLUS p }
	'-'            { MINUS p }
	'*'            { TIMES p }
	'/'            { DIVIDE p }
	'^'            { POWER p }
	quot           { QUOT p }
	rem            { REM p }
	"=="           { EQUALS p }
	">="           { GTEQ p }
	"<="           { LTEQ p }
	"/="           { NOTEQ p }
	'>'            { GT' p }
	'<'            { LT' p }
	'('            { LPAREN p }
	')'            { RPAREN p }
	var            { VAR p $$ }
	'['            { LBRACK p }
	']'            { RBRACK p }
	':'            { COLON p }
	','            { COMMA p }
	"++"           { PLUSPLUS p }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseHasquelito rule  0
	Expr            rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15
	Juxt            rules 16, 17, 18, 19, 20, 21, 22, 23, 24, 25
	Atom            rules 26, 27, 28, 29, 30
	TypeExp         rules 31, 32, 33
	PrimType        rules 34, 35, 36
	List            rule  37
	ListMembers     rules 38, 39, 40

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 3
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 1


	let            shift, and enter state 2


State 2

	Expr -> let . var '=' Expr in Expr                  (rule 1)

	var            shift, and enter state 42


State 3

	%start_parseHasquelito -> Expr .                    (rule 0)
	Expr -> Expr . "==" Expr                            (rule 4)
	Expr -> Expr . ">=" Expr                            (rule 5)
	Expr -> Expr . "<=" Expr                            (rule 6)
	Expr -> Expr . "/=" Expr                            (rule 7)
	Expr -> Expr . '>' Expr                             (rule 8)
	Expr -> Expr . '<' Expr                             (rule 9)
	Expr -> Expr . "&&" Expr                            (rule 10)
	Expr -> Expr . "||" Expr                            (rule 11)
	Expr -> Expr . ':' Expr                             (rule 12)
	Expr -> Expr . "++" Expr                            (rule 13)

	"&&"           shift, and enter state 32
	"||"           shift, and enter state 33
	"=="           shift, and enter state 34
	">="           shift, and enter state 35
	"<="           shift, and enter state 36
	"/="           shift, and enter state 37
	'>'            shift, and enter state 38
	'<'            shift, and enter state 39
	':'            shift, and enter state 40
	"++"           shift, and enter state 41
	%eof           accept


State 4

	Expr -> Juxt .                                      (rule 15)
	Juxt -> Juxt . Atom                                 (rule 16)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	in             reduce using rule 15
	then           reduce using rule 15
	else           reduce using rule 15
	"&&"           reduce using rule 15
	"||"           reduce using rule 15
	"=="           reduce using rule 15
	">="           reduce using rule 15
	"<="           reduce using rule 15
	"/="           reduce using rule 15
	'>'            reduce using rule 15
	'<'            reduce using rule 15
	'('            shift, and enter state 19
	')'            reduce using rule 15
	var            shift, and enter state 15
	':'            reduce using rule 15
	"++"           reduce using rule 15
	%eof           reduce using rule 15

	Atom           goto state 31

State 5

	Juxt -> Atom . '+' Atom                             (rule 20)
	Juxt -> Atom . '-' Atom                             (rule 21)
	Juxt -> Atom . '*' Atom                             (rule 22)
	Juxt -> Atom . '/' Atom                             (rule 23)
	Juxt -> Atom . '^' Atom                             (rule 24)
	Juxt -> Atom .                                      (rule 25)

	int            reduce using rule 25
	float          reduce using rule 25
	bool           reduce using rule 25
	in             reduce using rule 25
	then           reduce using rule 25
	else           reduce using rule 25
	"&&"           reduce using rule 25
	"||"           reduce using rule 25
	'+'            shift, and enter state 26
	'-'            shift, and enter state 27
	'*'            shift, and enter state 28
	'/'            shift, and enter state 29
	'^'            shift, and enter state 30
	"=="           reduce using rule 25
	">="           reduce using rule 25
	"<="           reduce using rule 25
	"/="           reduce using rule 25
	'>'            reduce using rule 25
	'<'            reduce using rule 25
	'('            reduce using rule 25
	')'            reduce using rule 25
	var            reduce using rule 25
	':'            reduce using rule 25
	"++"           reduce using rule 25
	%eof           reduce using rule 25


State 6

	Expr -> List .                                      (rule 14)

	in             reduce using rule 14
	then           reduce using rule 14
	else           reduce using rule 14
	"&&"           reduce using rule 14
	"||"           reduce using rule 14
	"=="           reduce using rule 14
	">="           reduce using rule 14
	"<="           reduce using rule 14
	"/="           reduce using rule 14
	'>'            reduce using rule 14
	'<'            reduce using rule 14
	')'            reduce using rule 14
	':'            reduce using rule 14
	"++"           reduce using rule 14
	%eof           reduce using rule 14


State 7

	Atom -> int .                                       (rule 27)

	int            reduce using rule 27
	float          reduce using rule 27
	bool           reduce using rule 27
	in             reduce using rule 27
	then           reduce using rule 27
	else           reduce using rule 27
	"&&"           reduce using rule 27
	"||"           reduce using rule 27
	'+'            reduce using rule 27
	'-'            reduce using rule 27
	'*'            reduce using rule 27
	'/'            reduce using rule 27
	'^'            reduce using rule 27
	"=="           reduce using rule 27
	">="           reduce using rule 27
	"<="           reduce using rule 27
	"/="           reduce using rule 27
	'>'            reduce using rule 27
	'<'            reduce using rule 27
	'('            reduce using rule 27
	')'            reduce using rule 27
	var            reduce using rule 27
	']'            reduce using rule 27
	':'            reduce using rule 27
	','            reduce using rule 27
	"++"           reduce using rule 27
	%eof           reduce using rule 27


State 8

	Atom -> float .                                     (rule 29)

	int            reduce using rule 29
	float          reduce using rule 29
	bool           reduce using rule 29
	in             reduce using rule 29
	then           reduce using rule 29
	else           reduce using rule 29
	"&&"           reduce using rule 29
	"||"           reduce using rule 29
	'+'            reduce using rule 29
	'-'            reduce using rule 29
	'*'            reduce using rule 29
	'/'            reduce using rule 29
	'^'            reduce using rule 29
	"=="           reduce using rule 29
	">="           reduce using rule 29
	"<="           reduce using rule 29
	"/="           reduce using rule 29
	'>'            reduce using rule 29
	'<'            reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	var            reduce using rule 29
	']'            reduce using rule 29
	':'            reduce using rule 29
	','            reduce using rule 29
	"++"           reduce using rule 29
	%eof           reduce using rule 29


State 9

	Atom -> bool .                                      (rule 28)

	int            reduce using rule 28
	float          reduce using rule 28
	bool           reduce using rule 28
	in             reduce using rule 28
	then           reduce using rule 28
	else           reduce using rule 28
	"&&"           reduce using rule 28
	"||"           reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'*'            reduce using rule 28
	'/'            reduce using rule 28
	'^'            reduce using rule 28
	"=="           reduce using rule 28
	">="           reduce using rule 28
	"<="           reduce using rule 28
	"/="           reduce using rule 28
	'>'            reduce using rule 28
	'<'            reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	var            reduce using rule 28
	']'            reduce using rule 28
	':'            reduce using rule 28
	','            reduce using rule 28
	"++"           reduce using rule 28
	%eof           reduce using rule 28


State 10

	Expr -> if . Expr then Expr else Expr               (rule 3)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 25
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 11

	Juxt -> '-' . Atom                                  (rule 19)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15

	Atom           goto state 24

State 12

	Juxt -> quot . Atom Atom                            (rule 17)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15

	Atom           goto state 23

State 13

	Juxt -> rem . Atom Atom                             (rule 18)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15

	Atom           goto state 22

State 14

	Expr -> '(' . '\\' var "->" Expr ')' "::" TypeExp "->" TypeExp    (rule 2)
	Atom -> '(' . Expr ')'                              (rule 26)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'\\'           shift, and enter state 21
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 20
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 15

	Atom -> var .                                       (rule 30)

	int            reduce using rule 30
	float          reduce using rule 30
	bool           reduce using rule 30
	in             reduce using rule 30
	then           reduce using rule 30
	else           reduce using rule 30
	"&&"           reduce using rule 30
	"||"           reduce using rule 30
	'+'            reduce using rule 30
	'-'            reduce using rule 30
	'*'            reduce using rule 30
	'/'            reduce using rule 30
	'^'            reduce using rule 30
	"=="           reduce using rule 30
	">="           reduce using rule 30
	"<="           reduce using rule 30
	"/="           reduce using rule 30
	'>'            reduce using rule 30
	'<'            reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	var            reduce using rule 30
	']'            reduce using rule 30
	':'            reduce using rule 30
	','            reduce using rule 30
	"++"           reduce using rule 30
	%eof           reduce using rule 30


State 16

	List -> '[' . ListMembers ']'                       (rule 37)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15
	']'            reduce using rule 38

	Atom           goto state 17
	ListMembers    goto state 18

State 17

	ListMembers -> Atom .                               (rule 39)
	ListMembers -> Atom . ',' ListMembers               (rule 40)

	']'            reduce using rule 39
	','            shift, and enter state 65


State 18

	List -> '[' ListMembers . ']'                       (rule 37)

	']'            shift, and enter state 64


State 19

	Atom -> '(' . Expr ')'                              (rule 26)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 20
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 20

	Expr -> Expr . "==" Expr                            (rule 4)
	Expr -> Expr . ">=" Expr                            (rule 5)
	Expr -> Expr . "<=" Expr                            (rule 6)
	Expr -> Expr . "/=" Expr                            (rule 7)
	Expr -> Expr . '>' Expr                             (rule 8)
	Expr -> Expr . '<' Expr                             (rule 9)
	Expr -> Expr . "&&" Expr                            (rule 10)
	Expr -> Expr . "||" Expr                            (rule 11)
	Expr -> Expr . ':' Expr                             (rule 12)
	Expr -> Expr . "++" Expr                            (rule 13)
	Atom -> '(' Expr . ')'                              (rule 26)

	"&&"           shift, and enter state 32
	"||"           shift, and enter state 33
	"=="           shift, and enter state 34
	">="           shift, and enter state 35
	"<="           shift, and enter state 36
	"/="           shift, and enter state 37
	'>'            shift, and enter state 38
	'<'            shift, and enter state 39
	')'            shift, and enter state 63
	':'            shift, and enter state 40
	"++"           shift, and enter state 41


State 21

	Expr -> '(' '\\' . var "->" Expr ')' "::" TypeExp "->" TypeExp    (rule 2)

	var            shift, and enter state 62


State 22

	Juxt -> rem Atom . Atom                             (rule 18)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15

	Atom           goto state 61

State 23

	Juxt -> quot Atom . Atom                            (rule 17)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15

	Atom           goto state 60

State 24

	Juxt -> '-' Atom .                                  (rule 19)

	int            reduce using rule 19
	float          reduce using rule 19
	bool           reduce using rule 19
	in             reduce using rule 19
	then           reduce using rule 19
	else           reduce using rule 19
	"&&"           reduce using rule 19
	"||"           reduce using rule 19
	"=="           reduce using rule 19
	">="           reduce using rule 19
	"<="           reduce using rule 19
	"/="           reduce using rule 19
	'>'            reduce using rule 19
	'<'            reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	var            reduce using rule 19
	':'            reduce using rule 19
	"++"           reduce using rule 19
	%eof           reduce using rule 19


State 25

	Expr -> if Expr . then Expr else Expr               (rule 3)
	Expr -> Expr . "==" Expr                            (rule 4)
	Expr -> Expr . ">=" Expr                            (rule 5)
	Expr -> Expr . "<=" Expr                            (rule 6)
	Expr -> Expr . "/=" Expr                            (rule 7)
	Expr -> Expr . '>' Expr                             (rule 8)
	Expr -> Expr . '<' Expr                             (rule 9)
	Expr -> Expr . "&&" Expr                            (rule 10)
	Expr -> Expr . "||" Expr                            (rule 11)
	Expr -> Expr . ':' Expr                             (rule 12)
	Expr -> Expr . "++" Expr                            (rule 13)

	then           shift, and enter state 59
	"&&"           shift, and enter state 32
	"||"           shift, and enter state 33
	"=="           shift, and enter state 34
	">="           shift, and enter state 35
	"<="           shift, and enter state 36
	"/="           shift, and enter state 37
	'>'            shift, and enter state 38
	'<'            shift, and enter state 39
	':'            shift, and enter state 40
	"++"           shift, and enter state 41


State 26

	Juxt -> Atom '+' . Atom                             (rule 20)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15

	Atom           goto state 58

State 27

	Juxt -> Atom '-' . Atom                             (rule 21)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15

	Atom           goto state 57

State 28

	Juxt -> Atom '*' . Atom                             (rule 22)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15

	Atom           goto state 56

State 29

	Juxt -> Atom '/' . Atom                             (rule 23)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15

	Atom           goto state 55

State 30

	Juxt -> Atom '^' . Atom                             (rule 24)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	'('            shift, and enter state 19
	var            shift, and enter state 15

	Atom           goto state 54

State 31

	Juxt -> Juxt Atom .                                 (rule 16)

	int            reduce using rule 16
	float          reduce using rule 16
	bool           reduce using rule 16
	in             reduce using rule 16
	then           reduce using rule 16
	else           reduce using rule 16
	"&&"           reduce using rule 16
	"||"           reduce using rule 16
	"=="           reduce using rule 16
	">="           reduce using rule 16
	"<="           reduce using rule 16
	"/="           reduce using rule 16
	'>'            reduce using rule 16
	'<'            reduce using rule 16
	'('            reduce using rule 16
	')'            reduce using rule 16
	var            reduce using rule 16
	':'            reduce using rule 16
	"++"           reduce using rule 16
	%eof           reduce using rule 16


State 32

	Expr -> Expr "&&" . Expr                            (rule 10)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 53
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 33

	Expr -> Expr "||" . Expr                            (rule 11)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 52
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 34

	Expr -> Expr "==" . Expr                            (rule 4)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 51
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 35

	Expr -> Expr ">=" . Expr                            (rule 5)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 50
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 36

	Expr -> Expr "<=" . Expr                            (rule 6)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 49
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 37

	Expr -> Expr "/=" . Expr                            (rule 7)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 48
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 38

	Expr -> Expr '>' . Expr                             (rule 8)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 47
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 39

	Expr -> Expr '<' . Expr                             (rule 9)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 46
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 40

	Expr -> Expr ':' . Expr                             (rule 12)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 45
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 41

	Expr -> Expr "++" . Expr                            (rule 13)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 44
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 42

	Expr -> let var . '=' Expr in Expr                  (rule 1)

	'='            shift, and enter state 43


State 43

	Expr -> let var '=' . Expr in Expr                  (rule 1)

	int            shift, and enter state 7
	float          shift, and enter state 8
	bool           shift, and enter state 9
	let            shift, and enter state 2
	if             shift, and enter state 10
	'-'            shift, and enter state 11
	quot           shift, and enter state 12
	rem            shift, and enter state 13
	'('            shift, and enter state 14
	var            shift, and enter state 15
	'['            shift, and enter state 16

	Expr           goto state 69
	Juxt           goto state 4
	Atom           goto state 5
	List           goto state 6

State 44

	Expr -> Expr . "==" Expr                            (rule 4)
	Expr -> Expr . ">=" Expr                            (rule 5)
	Expr -> Expr . "<=" Expr                            (rule 6)
	Expr -> Expr . "/=" Expr                            (rule 7)
	Expr -> Expr . '>' Expr                             (rule 8)
	Expr -> Expr . '<' Expr                             (rule 9)
	Expr -> Expr . "&&" Expr                            (rule 10)
	Expr -> Expr . "||" Expr                            (rule 11)
	Expr -> Expr . ':' Expr                             (rule 12)
	Expr -> Expr . "++" Expr                            (rule 13)
	Expr -> Expr "++" Expr .                            (rule 13)

	in             reduce using rule 13
	then           reduce using rule 13
	else           reduce using rule 13
	"&&"           shift, and enter state 32
	"||"           shift, and enter state 33
	"=="           shift, and enter state 34
	">="           shift, and enter state 35
	"<="           shift, and enter state 36
	"/="           shift, and enter state 37
	'>'            shift, and enter state 38
	'<'            shift, and enter state 39
	')'            reduce using rule 13
	':'            shift, and enter state 40
	"++"           shift, and enter state 41
	%eof           reduce using rule 13


State 45

	Expr -> Expr . "==" Expr                            (rule 4)
	Expr -> Expr . ">=" Expr                            (rule 5)
	Expr -> Expr . "<=" Expr                            (rule 6)
	Expr -> Expr . "/=" Expr                            (rule 7)
	Expr -> Expr . '>' Expr                             (rule 8)
	Expr -> Expr . '<' Expr                             (rule 9)
	Expr -> Expr . "&&" Expr                            (rule 10)
	Expr -> Expr . "||" Expr                            (rule 11)
	Expr -> Expr . ':' Expr                             (rule 12)
	Expr -> Expr ':' Expr .                             (rule 12)
	Expr -> Expr . "++" Expr                            (rule 13)

	in             reduce using rule 12
	then           reduce using rule 12
	else           reduce using rule 12
	"&&"           shift, and enter state 32
	"||"           shift, and enter state 33
	"=="           shift, and enter state 34
	">="           shift, and enter state 35
	"<="           shift, and enter state 36
	"/="           shift, and enter state 37
	'>'            shift, and enter state 38
	'<'            shift, and enter state 39
	')'            reduce using rule 12
	':'            shift, and enter state 40
	"++"           shift, and enter state 41
	%eof           reduce using rule 12


State 46
